k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
spec:
  type: NodePort
  selector:
    app: landing-page
  ports:
    - port: 80
      targetPort: 80
      # nodePort removed, Kubernetes will assign automatically
