k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page-ingress
  namespace: NAMESPACE_PLACEHOLDER   # Replace with dev, stage, or prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /PATH_PLACEHOLDER(/|$)(.*)   # Replace with dev, stage, or prod
            pathType: Prefix
            backend:
              service:
                name: landing-page
                port:
                  number: 80
